# fast-interconnects-demo

./: Cargo.toml  LICENSE  README.md  ccgpu-demo.cu  ccnuma-demo.cu  cpu-demo.cu  cuda-demo.cu
rust-demo/: Cargo.toml  build.rs
rust-demo/cudautils/: vadd.cu
rust-demo/src/: main.rs
